carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_list_diff_added_struct_child_gutter.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.iam.Role role
      assume_role_policy_document: "{}"
      role_name: "test-role"
        │
        ├─ ~ awscc.iam.RolePolicy policy
        │     statement:
        │         {action: "s3:GetObject", effect: "Allow", resource: "arn:aws:s3:::example/*", sid: "AllowS3Read"}
        │       + {
        │           action: [
        │             "cloudformation:CancelResourceRequest",
        │             "cloudformation:CreateResource",
        │             "cloudformation:DeleteResource",
        │             "cloudformation:GetResource",
        │           ]
        │           effect: "Allow"
        │           resource: ["*"]
        │           sid: "CloudControl"
        │         }
        │     # (2 unchanged attributes hidden)
        │
        └─ + awscc.s3.Bucket awscc_s3_bucket_d937e049
              bucket_name: "zzz-trailing-sibling"

Plan: 2 to add, 1 to change, 0 to destroy.
