carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_list_diff_paired_all_unchanged_dropped.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.iam.RolePolicy policy
      policy_document: "{}" → "{"Version":"2012-10-17"}"
      # (3 unchanged attributes hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
