carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_list_diff_string_list_grew.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.iam.RolePolicy policy
      statement:
        ~ {
            action:
              + "route53:ListQueryLoggingConfigs"
              + "route53:GetQueryLoggingConfig"
              # (11 unchanged elements hidden)
            # (3 unchanged fields hidden)
          }
      # (2 unchanged attributes hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
