carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_list_struct_child_gutter.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.iam.Role role
      assume_role_policy_document: "{}"
      role_name: "test-role"
        │
        ├─ + awscc.iam.RolePolicy awscc_iam_role_policy_a6e9f569
        │     policy_name: "test-inline"
        │     role_name: "test-role"
        │     statement: 
        │       * action: "s3:GetObject"
        │         effect: "Allow"
        │         resource: "arn:aws:s3:::example/*"
        │         sid: "AllowS3Read"
        │
        │       * action: "s3:PutObject"
        │         effect: "Deny"
        │         resource: "arn:aws:s3:::example/*"
        │         sid: "DenyS3Write"
        │
        └─ + awscc.s3.Bucket awscc_s3_bucket_d937e049
              bucket_name: "zzz-trailing-sibling"

Plan: 3 to add, 0 to change, 0 to destroy.
