carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_map_added_from_none.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.ec2.Vpc vpc
      tags:
        + Component: "registry"
        + Environment: "dev"
        + ManagedBy: "carina"
        + Project: "carina-rs"
        + Repository: "carina-rs/infra"
      # (1 unchanged attribute hidden)

Plan: 0 to add, 1 to change, 0 to destroy.
